# Lead-Accelerator

./: .gitignore  README.md  app.py  case_study.html  case_study.md  main.py  nextjs_integration_plan.md  pyproject.toml  requirements.txt  run_system.py
data/: checkpoints.db-shm  checkpoints.db-wal
lead_materials/sample_profiles/: case_studies.md  value_proposition.md
src/a2a_services/: objection_service.py  sales_research_partner.py
src/agents/: crm_coach.py  human_approval.py  lead_researcher.py  objection_simulator.py  personalizer.py
src/graph/: state.py  workflow.py
src/lead_accelerator.egg-info/: PKG-INFO  SOURCES.txt
src/mcp_servers/: filesystem_server.py  memory_server.py
src/utils/: a2a_client.py  llm.py  outbox.py
tests/: conftest.py  test_a2a.py  test_eval.py  test_mcp_servers.py  test_objection_and_coach.py
